--- a/oct01pp/src/components/home/Home.css
+++ b/oct01pp/src/components/home/Home.css
@@ -1,27 +1,163 @@
-.body {
-    background-color: black;
+
+/*This file can be much smaller and more concise*/
+/*especially if you install a css processor like SCSS / SASS*/
+
+
+/*colors */
+.yellow {
+    color: #AABB94;
 }
 
-.bg-img {
-    padding-left: 25%;
-    background-size: 150px;
+.white {
+    color: #FFF;
 }
 
-.header {
-    color: cadetblue;
-    font-size: 3em;
-    font-family: "Adobe Garamond Pro", serif;
-    text-align: left;
-    margin-left: 10%;
+/*mobile styles are applied to every other screen size until you override it*/
+@media only screen and (min-width: 320px) {
+    /*main container */
+    section {
+        background-color: #000;
+        min-height: 100vh;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /*inner wrapper container*/
+    section .wrapper {
+        width: 100%;
+        min-height: 99vh;
+        height: 100%;
+        border-top: 1px solid #FFF;
+        border-bottom: 1px solid #FFF;
+    }
+
+    /*header container*/
+    section .wrapper .header {
+
+    }
+
+    section .wrapper .header h1 {
+        color: #0E6F8D;
+        font-size: 5.2em;
+        font-weight: 200;
+        text-align: center;
+        font-family: "Adobe Garamond Pro", serif;
+        margin-bottom: 0;
+        margin-top: 0;
+        padding: 6vh 0;
+
+    }
+
+    /*main body container*/
+    section .wrapper .main {
+
+    }
+
+    /*navigation container*/
+    section .wrapper .main .nav {
+        list-style: none;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+        align-items: center;
+
+        margin-right: 0;
+    }
+
+    section .wrapper .main .nav ul {
+        list-style: none;
+        padding-left: 0;
+    }
+
+    section .wrapper .main .nav ul li {
+        border-bottom: 1px solid #FFF;
+        width: 186px;
+        margin-top: 0;
+        padding-top: 0;
+        margin-bottom: 12px;
+    }
+
+    section .wrapper .main .nav ul li:first-child {
+        margin-left: 160px;
+    }
+
+    section .wrapper .main .nav ul li:nth-child(2) {
+        margin-left: 120px;
+    }
+
+    section .wrapper .main .nav ul li:nth-child(3) {
+        margin-left: 80px;
+    }
+
+    section .wrapper .main .nav ul li:nth-child(4) {
+        margin-left: 40px;
+    }
+
+    section .wrapper .main .nav ul li a {
+        font-weight: 200;
+        margin-top: 0;
+        padding-top: 0;
+    }
+
+    /*made the image a background image of a div so it scales and does not take up extra space*/
+    section .wrapper .main .img {
+        background-image: url("../../media/img/bg.png");
+        background-size: cover;
+        width: 80%;
+        min-height: 30vh;
+        margin: 15px auto;
+        border: 1px solid #FFF;
+    }
 }
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-}
 
-.App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-}
+/*small tablet size*/
+@media only screen and (min-width: 768px) {
+    section .wrapper {
+        width: 90%;
+        border: 3px solid #FFF;
+        margin-top: 6vh;
+        height: 78vh;
 
+        min-height: 78vh;
+    }
+
+    section .wrapper .header {
+        padding-left: 13%;
+    }
+
+    section .wrapper .header h1 {
+        text-align: left;
+        font-size: 6.8em;
+    }
+
+    section .wrapper .main {
+        display: flex;
+        justify-content: center;
+
+        padding-right: 13%;
+        padding-left: 4%;
+    }
+
+    section .wrapper .main .nav {
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+
+        margin-right: -20px;
+        z-index: 1;
+    }
+
+    section .wrapper .main ul {
+
+    }
+
+    section .wrapper .main .img {
+        width: 40%;
+        min-height: 270px;
+        margin: 0 0;
+    }
+}
