--- a/oct01pp/src/components/home/Home.css
+++ b/oct01pp/src/components/home/Home.css
@@ -28,15 +28,20 @@
     /*inner wrapper container*/
     section .wrapper {
         width: 100%;
-        min-height: 99vh;
-        height: 100%;
+        min-height: 88vh;
+        height: 98%;
+        margin: auto 0;
         border-top: 1px solid #FFF;
         border-bottom: 1px solid #FFF;
     }
 
     /*header container*/
     section .wrapper .header {
-
+        /*creates equal distance from the top border and first link in the nav*/
+        height: 24vh;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
     section .wrapper .header h1 {
@@ -45,10 +50,6 @@
         font-weight: 200;
         text-align: center;
         font-family: "Adobe Garamond Pro", serif;
-        margin-bottom: 0;
-        margin-top: 0;
-        padding: 6vh 0;
-
     }
 
     /*main body container*/
@@ -69,7 +70,8 @@
 
     section .wrapper .main .nav ul {
         list-style: none;
-        padding-left: 0;
+        padding: 0 0;
+        margin: 0;
     }
 
     section .wrapper .main .nav ul li {
