--- a/oct01pp/src/components/home/Home.css
+++ b/oct01pp/src/components/home/Home.css
@@ -147,7 +147,7 @@
     section .wrapper .main .nav {
         justify-content: center;
         flex-direction: row;
-        align-items: center;
+        align-items: flex-end;
 
         margin-right: -20px;
         z-index: 1;
