--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -20,9 +20,13 @@
         min-height: 100vh;
         width: 100%;
         height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        @include flexbox();
+        @include flex-direction(column);
+        @include align-items(center);
+
+        //display: flex;
+        //flex-direction: column;
+        //align-items: center;
     }
 
     /*inner wrapper container*/
