--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -1,7 +1,7 @@
 
 /*This file can be much smaller and more concise*/
 /*especially if you install a css processor like SCSS / SASS*/
-
+@import '../../styles/flexbox';
 
 /*colors */
 .yellow {
