--- a/oct01pp/src/components/home/Home.css
+++ b/oct01pp/src/components/home/Home.css
@@ -1,5 +1,8 @@
 /*This file can be much smaller and more concise*/
 /*especially if you install a css processor like SCSS / SASS*/
+/*!
+ * Copyright (c) 2017. Traveliko PTE.LTD. All rights Reserved.
+ */
 /*colors */
 .yellow {
   color: #AABB94; }
@@ -15,8 +18,21 @@
     min-height: 100vh;
     width: 100%;
     height: auto;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
     align-items: center; }
   /*inner wrapper container*/
   section .wrapper {
