--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -23,10 +23,6 @@
         @include flexbox();
         @include flex-direction(column);
         @include align-items(center);
-
-        //display: flex;
-        //flex-direction: column;
-        //align-items: center;
     }
 
     /*inner wrapper container*/
@@ -127,13 +123,15 @@
         border: 3px solid #FFF;
         margin-top: 6vh;
         height: 78vh;
-
         min-height: 78vh;
+
+      .header {
+        padding-left: 13%;
+      }
+
     }
 
-    section .wrapper .header {
-        padding-left: 13%;
-    }
+
 
     section .wrapper .header h1 {
         text-align: left;
