condenced css file using scss nesting

--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -118,50 +118,47 @@
 
 /*small tablet size*/
 @media only screen and (min-width: 768px) {
-    section .wrapper {
-        width: 90%;
-        border: 3px solid #FFF;
-        margin-top: 6vh;
-        height: 78vh;
-        min-height: 78vh;
+  section .wrapper {
 
-      .header {
-        padding-left: 13%;
-      }
+    // TODO Desktop Wrapper layout
+      width: 90%;
+      border: 3px solid #FFF;
+      margin-top: 6vh;
+      height: 78vh;
+      min-height: 78vh;
 
-    }
+    // TODO Header section of component
+    .header {
+      padding-left: 13%;
 
-
-
-    section .wrapper .header h1 {
+      h1 {
         text-align: left;
         font-size: 6.8em;
+      }
     }
 
-    section .wrapper .main {
-        display: flex;
-        justify-content: center;
+    // TODO Main body of component
+    .main {
+      display: flex;
+      justify-content: center;
 
-        padding-right: 13%;
-        padding-left: 4%;
-    }
+      padding-right: 13%;
+      padding-left: 4%;
 
-    section .wrapper .main .nav {
+      .nav {
         justify-content: center;
         flex-direction: row;
         align-items: flex-end;
 
         margin-right: -20px;
         z-index: 1;
-    }
+      }
 
-    section .wrapper .main ul {
-
-    }
-
-    section .wrapper .main .img {
+      .img {
         width: 40%;
         min-height: 270px;
         margin: 0 0;
+      }
     }
+  }
 }
