--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -106,7 +106,7 @@
 
     /*made the image a background image of a div so it scales and does not take up extra space*/
     section .wrapper .main .img {
-        background-image: url("../../media/img/bg.png");
+        background-image: url("../../assets/media/img/bg.png");
         background-size: cover;
         width: 80%;
         min-height: 30vh;
