--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -102,6 +102,8 @@
         font-weight: 200;
         margin-top: 0;
         padding-top: 0;
+        font-family: "Andale Mono", serif;
+        text-decoration-line: none;
     }
 
     /*made the image a background image of a div so it scales and does not take up extra space*/
