--- a/oct01pp/src/components/about/About.css
+++ b/oct01pp/src/components/about/About.css
@@ -36,7 +36,6 @@
     -moz-align-items: left;
     align-items: left; }
   /*header for all secondary pages.
-  Trying to align the content to the baseline!
   */
   section .secheader {
     width: 100%;
@@ -48,12 +47,12 @@
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1.5em; }
-  /*would like to style the smaller logo like this but place in line*/
+  /* TODO style the smaller logo like this but place in line*/
   section .secheader h3 {
     color: #0E6F8D;
     font-family: "Adobe Garamond Pro", serif;
     font-size: 2em; }
-  /*trying to have some elements align in a row/right,
+  /* TODO have some elements align in a row/right,
   not sure how to so applied a clumsy margin-right.
   Also, not sure why the color isn't appearing*/
   section .secondarynav {
@@ -64,7 +63,7 @@
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1em; }
-  /*not sure why this style doesn't appear, I copied this into the section above*/
+  /*TODO figure out why this style doesn't appear, I copied this into the section above*/
   section .secondarynav button {
     color: #AABB94;
     font-family: "Andale Mono", serif;
@@ -76,7 +75,7 @@
     width: 75vw;
     align-content: flex-start;
     font-size: .8em; }
-  /*not sure why this style doesn't appear*/
+  /*TODO figure out why this style doesn't appear*/
   section .secondarymain text {
     font-family: "Andale Mono", serif;
     color: #FFF;
