--- a/oct01pp/src/components/about/About.scss
+++ b/oct01pp/src/components/about/About.scss
@@ -68,6 +68,12 @@
   /* TODO have some elements align in a row/right,
   not sure how to so applied a clumsy margin-right.
   Also, not sure why the color isn't appearing*/
+  section .secondarynav .button {
+    color: #AABB94;
+    font-family: "Andale Mono", serif;
+    font-size: 1em;
+  }
+
   section .secondarynav {
     margin-left: 40px;
     height: 12vh;
@@ -77,8 +83,9 @@
     font-family: "Andale Mono", serif;
     font-size: 1em;
 
-    button {
+    .button {
       color: #AABB94;
+      background-color: #AABB94;
       font-family: "Andale Mono", serif;
       font-size: 1em;
     }
