--- a/oct01pp/src/components/home/Home.scss
+++ b/oct01pp/src/components/home/Home.scss
@@ -1,6 +1,7 @@
 
-/*This file can be much smaller and more concise*/
-/*especially if you install a css processor like SCSS / SASS*/
+//Rules:
+//never nest more than 3 deep
+
 @import '../../styles/flexbox';
 
 /*colors */
@@ -16,49 +17,54 @@
 @media only screen and (min-width: 320px) {
     /*main container */
     section {
-        background-color: #000;
-        min-height: 100vh;
-        width: 100%;
-        height: auto;
-        @include flexbox();
-        @include flex-direction(column);
-        @include align-items(center);
+      @include flexbox();
+      @include flex-direction(column);
+      @include align-items(center);
+
+      width: 100%;
+      height: auto;
+      min-height: 100vh;
+
+      background-color: #000
     }
 
     /*inner wrapper container*/
     section .wrapper {
-        width: 100%;
-        min-height: 88vh;
-        height: 98%;
-        margin: auto 0;
-        border-top: 1px solid #FFF;
-        border-bottom: 1px solid #FFF;
+      width: 100%;
+      height: 98%;
+      min-height: 88vh;
+
+      margin: auto 0;
+
+      border-top: 1px solid #FFF;
+      border-bottom: 1px solid #FFF;
     }
 
     /*header container*/
     section .wrapper .header {
         /*creates equal distance from the top border and first link in the nav*/
-        height: 24vh;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
+      display: flex;  // use sass mixins here
+      justify-content: center;
+      flex-direction: column;
 
-    section .wrapper .header h1 {
-        color: #0E6F8D;
+      height: 24vh;
+
+
+      h1 {
+        text-align: center;
+
         font-size: 5.2em;
         font-weight: 200;
-        text-align: center;
         font-family: "Adobe Garamond Pro", serif;
+
+        color: #0E6F8D;
+      }
     }
 
     /*main body container*/
     section .wrapper .main {
 
-    }
-
-    /*navigation container*/
-    section .wrapper .main .nav {
+      .nav {
         list-style: none;
         display: flex;
         justify-content: flex-start;
@@ -66,6 +72,7 @@
         align-items: center;
 
         margin-right: 0;
+      }
     }
 
     section .wrapper .main .nav ul {
