fixed structure and added contact

--- a/oct01pp/src/components/about/About.css
+++ b/oct01pp/src/components/about/About.css
@@ -56,7 +56,6 @@
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1.5em; }
-  /* TODO style the smaller logo like this but place in line*/
   section .secheader h3 {
     margin: 0;
     color: #0E6F8D;
@@ -68,7 +67,8 @@
   section .secondarynav .button {
     color: #AABB94;
     font-family: "Andale Mono", serif;
-    font-size: 1em; }
+    font-size: 1em;
+    text-decoration-line: none; }
   section .secondarynav {
     margin-left: 40px;
     height: 12vh;
@@ -79,7 +79,6 @@
     font-size: 1em; }
     section .secondarynav .button {
       color: #AABB94;
-      background-color: #AABB94;
       font-family: "Andale Mono", serif;
       font-size: 1em; }
   /*TODO figure out why this style doesn't appear, I copied this into the section above*/
@@ -94,8 +93,17 @@
     width: 75vw;
     align-content: flex-start;
     font-size: .8em; }
-  /*TODO figure out why this style doesn't appear*/
   section .secondarymain text {
     font-family: "Andale Mono", serif;
     color: #FFF;
     margin-left: 40px; } }
+
+/*TODO align the footer to the bottom of the page*/
+section .footer {
+  font-family: "Andale Mono", serif;
+  color: #AABB94;
+  font-size: 1em;
+  margin: 100px 40px 40px 0;
+  flex-direction: column;
+  align-self: flex-end;
+  align-items: baseline; }
