--- a/oct01pp/src/components/copies/Copies.scss
+++ b/oct01pp/src/components/copies/Copies.scss
@@ -1,1 +1,65 @@
 @import '../../styles/_flexbox.scss';
+/*colors */
+.yellow {
+  color: #AABB94;
+}
+
+.white {
+  color: #FFF;
+}
+
+.blue {
+  color: #0E6F8D;
+}
+
+/*mobile styles are applied to every other screen size until you override it*/
+@media only screen and (min-width: 320px) {
+  /*main container */
+  section {
+    background-color: #000;
+    min-height: 100vh;
+    width: 100%;
+    height: auto;
+    @include flexbox();
+    @include flex-direction(column);
+    @include align-items(left);
+  }
+
+  button {
+    color: #AABB94;
+    font-family: "Andale Mono", serif;
+    font-size: 1em;
+  }
+
+  /*header for all secondary pages.
+  */
+  //TODO align the content to the baseline!
+  section .secheader {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+    min-height: 10vh;
+    border-bottom: 1px solid #FFF;
+
+    div {
+      display: flex;
+      align-items: baseline;
+    }
+  }
+
+  section .secheader h2 {
+    margin: 0 3px 0 40px;
+    color: #AABB94;
+    font-family: "Andale Mono", serif;
+    font-size: 1.5em;
+  }
+
+  /* TODO style the smaller logo like this but place in line*/
+  section .secheader h3 {
+    margin: 0;
+    color: #0E6F8D;
+    font-family: "Adobe Garamond Pro", serif;
+    font-size: 2em;
+  }
+}
