added copies page

--- a/oct01pp/src/components/home/Home.css
+++ b/oct01pp/src/components/home/Home.css
@@ -39,7 +39,9 @@
     min-height: 88vh;
     margin: auto 0;
     border-top: 1px solid #FFF;
-    border-bottom: 1px solid #FFF; }
+    border-bottom: 1px solid #FFF;
+    border-left: transparent;
+    border-right: transparent; }
   /*header container*/
   section .wrapper .header {
     /*creates equal distance from the top border and first link in the nav*/
@@ -97,8 +99,11 @@
 /*small tablet size*/
 @media only screen and (min-width: 768px) {
   section .wrapper {
-    width: 90%;
-    border: 3px solid #FFF;
+    width: 100%;
+    border-top: 1px solid #FFF;
+    border-bottom: 1px solid #FFF;
+    border-left: transparent;
+    border-right: transparent;
     margin-top: 6vh;
     height: 78vh;
     min-height: 78vh; }
