--- a/oct01pp/src/components/copies/Copies.css
+++ b/oct01pp/src/components/copies/Copies.css
@@ -35,10 +35,13 @@
     -webkit-align-items: left;
     -moz-align-items: left;
     align-items: left; }
-  button {
+  .button {
     color: #AABB94;
     font-family: "Andale Mono", serif;
-    font-size: 1em; }
+    font-size: 1em;
+    background-color: transparent;
+    margin-left: 40px;
+    margin-bottom: 60px; }
   /*header for all secondary pages.
   */
   section .secheader {
@@ -51,14 +54,50 @@
     section .secheader div {
       display: flex;
       align-items: baseline; }
-  section .secheader h2 {
-    margin: 0 3px 0 40px;
-    color: #AABB94;
-    font-family: "Andale Mono", serif;
-    font-size: 1.5em; }
-  /* TODO style the smaller logo like this but place in line*/
-  section .secheader h3 {
-    margin: 0;
-    color: #0E6F8D;
-    font-family: "Adobe Garamond Pro", serif;
-    font-size: 2em; } }
+    section .secheader section .secheader h2 {
+      margin: 0 3px 0 40px;
+      color: #AABB94;
+      font-family: "Andale Mono", serif;
+      font-size: 1.5em; }
+    section .secheader section .secheader h3 {
+      margin: 0;
+      color: #0E6F8D;
+      font-family: "Adobe Garamond Pro", serif;
+      font-size: 2em; }
+  /* Display of thumbnail images and descriptions. */
+  section .thumbnails {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    align-content: flex-start;
+    margin-left: 40px;
+    margin-right: 40px; }
+    section .thumbnails .title1 {
+      margin: 20px 40px 60px 0;
+      background-image: url("../../assets/media/img/title1.png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 270px; }
+      section .thumbnails .title1 .caption {
+        color: #ffffff;
+        font-family: "Andale Mono", serif;
+        font-size: 1em;
+        text-align: center;
+        margin-top: -25px; }
+    section .thumbnails .title2 {
+      margin: 20px 40px 60px 0;
+      background-image: url("../../assets/media/img/title2.png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 270px;
+      min-width: 360px; }
+      section .thumbnails .title2 .caption {
+        color: #ffffff;
+        font-family: "Andale Mono", serif;
+        font-size: 1em;
+        text-align: center;
+        margin-top: -25px; } }
