fixed one typo in about

--- a/oct01pp/src/components/about/About.css
+++ b/oct01pp/src/components/about/About.css
@@ -91,12 +91,12 @@
     color: #FFF;
     margin-left: 40px;
     width: 75vw;
-    align-content: flex-start;
-    font-size: .8em; }
+    align-content: flex-start; }
   section .secondarymain text {
     font-family: "Andale Mono", serif;
     color: #FFF;
-    margin-left: 40px; } }
+    margin-left: 40px;
+    font-size: 1em; } }
 
 /*TODO align the footer to the bottom of the page*/
 section .footer {
