--- a/oct01pp/src/components/about/About.scss
+++ b/oct01pp/src/components/about/About.scss
@@ -104,13 +104,14 @@
     margin-left: 40px;
     width: 75vw;
     align-content: flex-start;
-    font-size: .8em;
+
   }
 
   section .secondarymain text {
     font-family: "Andale Mono", serif;
     color: #FFF;
     margin-left: 40px;
+    font-size: 1em;
   }
 
 }
