--- a/oct01pp/src/components/copies/Copies.scss
+++ b/oct01pp/src/components/copies/Copies.scss
@@ -56,11 +56,12 @@
       font-size: 1.5em;
     }
 
-    section .secheader h3 {
+    section .secheader a {
       margin: 0;
       color: #0E6F8D;
       font-family: "Adobe Garamond Pro", serif;
       font-size: 2em;
+      text-decoration: none
     }
   }
   /* Display of thumbnail images and descriptions. */
