--- a/oct01pp/src/components/copies/Copies.css
+++ b/oct01pp/src/components/copies/Copies.css
@@ -59,7 +59,7 @@
       color: #AABB94;
       font-family: "Andale Mono", serif;
       font-size: 1.5em; }
-    section .secheader section .secheader a {
+    section .secheader .home-anchor {
       margin: 0;
       color: #0E6F8D;
       font-family: "Adobe Garamond Pro", serif;
