--- a/oct01pp/src/components/copies/Copies.scss
+++ b/oct01pp/src/components/copies/Copies.scss
@@ -56,7 +56,7 @@
       font-size: 1.5em;
     }
 
-    section .secheader a {
+    .home-anchor {
       margin: 0;
       color: #0E6F8D;
       font-family: "Adobe Garamond Pro", serif;
