fixed spacing problems

--- a/oct01pp/src/components/about/About.css
+++ b/oct01pp/src/components/about/About.css
@@ -14,7 +14,7 @@
 /*mobile styles are applied to every other screen size until you override it*/
 @media only screen and (min-width: 320px) {
   /*main container */
-  section {
+  section_a {
     background-color: #000;
     min-height: 100vh;
     width: 100%;
@@ -41,22 +41,22 @@
     font-size: 1em; }
   /*header for all secondary pages.
   */
-  section .secheader {
+  section_a .secheader {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
     width: 100%;
     min-height: 10vh;
     border-bottom: 1px solid #FFF; }
-    section .secheader div {
+    section_a .secheader div {
       display: flex;
       align-items: baseline; }
-  section .secheader h2 {
+  section_a .secheader h2 {
     margin: 0 3px 0 40px;
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1.5em; }
-  section .secheader h3 {
+  section_a .secheader h3 {
     margin: 0;
     color: #0E6F8D;
     font-family: "Adobe Garamond Pro", serif;
@@ -64,12 +64,12 @@
   /* TODO have some elements align in a row/right,
   not sure how to so applied a clumsy margin-right.
   Also, not sure why the color isn't appearing*/
-  section .secondarynav .button {
+  section_a .secondarynav .button {
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1em;
     text-decoration-line: none; }
-  section .secondarynav {
+  section_a .secondarynav {
     margin-left: 40px;
     height: 12vh;
     align-self: flex-end;
@@ -77,29 +77,29 @@
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1em; }
-    section .secondarynav .button {
+    section_a .secondarynav .button {
       color: #AABB94;
       font-family: "Andale Mono", serif;
       font-size: 1em; }
-  /*TODO figure out why this style doesn't appear, I copied this into the section above*/
-  section .secondarynav button {
+  /*TODO figure out why this style doesn't appear, I copied this into the section_a above*/
+  section_a .secondarynav button {
     color: #AABB94;
     font-family: "Andale Mono", serif;
     font-size: 1em; }
-  section .secondarymain {
+  section_a .secondarymain {
     font-family: "Andale Mono", serif;
     color: #FFF;
     margin-left: 40px;
     width: 75vw;
     align-content: flex-start; }
-  section .secondarymain text {
+  section_a .secondarymain text {
     font-family: "Andale Mono", serif;
     color: #FFF;
     margin-left: 40px;
     font-size: 1em; } }
 
 /*TODO align the footer to the bottom of the page*/
-section .footer {
+section_a .footer {
   font-family: "Andale Mono", serif;
   color: #AABB94;
   font-size: 1em;
